syntax = "proto3";

package generated;

option go_package = "github.com/gamedb/gamedb/pkg/backend/generated";

import "shared.proto";
import "google/protobuf/timestamp.proto";

service GitHubService {
    rpc Commits (CommitsRequest) returns (CommitsResponse) {
    }
}

message CommitsRequest {
    PaginationRequest2 pagination = 1;
}

message CommitsResponse {
    repeated CommitResponse commits = 1;
}

message CommitResponse {
    string message = 1;
    google.protobuf.Timestamp time = 2;
    string link = 3;
    string hash = 4;
}
